minor layout issue

--- a/app/src/admin/trip-edit/sass/main.scss
+++ b/app/src/admin/trip-edit/sass/main.scss
@@ -171,7 +171,7 @@
 
     .wp-travel-trip-edit-menu-add-gap {
       .components-tab-panel__tab-content {
-        padding: 15px;
+        margin-top: 15px;
         .wp-travel-trip-pricings{
           .wp-travel-select-pricing{
             .components-panel__row{
